# codextest

./: CODE.md  Cargo.toml  LICENSE  README.md  pyproject.toml
src/: ai.rs  lib.rs
