[package]
name = "pdfmodule"
version = "0.1.0"
edition = "2024"

[lib]
name = "pdfmodule"
crate-type = ["cdylib"]

[dependencies]
pdf = "0.9.0"
png = "0.18.0"
pyo3 = { version = "0.26.0", features = ["extension-module"] }
image = "0.25.1"
pdfium-render = { version = "0.8.35", default-features = false, features = ["pdfium_latest", "thread_safe", "image"] }
