[package]
name = "pdfmodule"
version = "0.1.0"
edition = "2024"

[lib]
name = "pdfmodule"
crate-type = ["cdylib"]

[dependencies]
pdf = "0.9.0"
png = "0.18.0"
pyo3 = { version = "0.26.0", features = ["extension-module"] }
image = "0.25.1"
nipdf = "0.1.1"
nipdf-render = "0.1.1"
vtracer = "0.6.0"
clap = { version = "4.5", features = ["derive"] }
ndarray = { version = "0.15", features = ["std"] }
ort = { version = "2.0.0-rc.4", features = ["download-binaries"] }
thiserror = "1.0"
reqwest = { version = "0.12", features = ["blocking", "gzip", "brotli"] }
